--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,56 +3,61 @@ version: "3.8"
 services:
   web:
     build: .
-    restart: always
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - REDBEAT_REDIS_URL=redis://redis:6379/1
-#    volumes:
-#      - C:\Users\Nikita\Projects\avito_stats\celerybeat-schedule:/usr/src/app/celerybeat-schedule
+    restart: unless-stopped
+    env_file:
+      - .env
     ports:
       - 8080:8080
+    depends_on:
+      - db
     command: uvicorn web.app:app --host 0.0.0.0 --port 8080
+
+  db:
+    image: postgres:13.6
+    restart: unless-stopped
+    env_file:
+      - .env
+    ports:
+      - 7432:5432
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
 
   redis:  # broker and tasks result backend
     image: redis:6
+    restart: unless-stopped
     volumes:
       - redis_data:/data
 
 
   worker:  # celery based worker and beat scheduler
     build: .
-    command: celery --app=scheduler.celery.app worker --loglevel=debug
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - REDBEAT_REDIS_URL=redis://redis:6379/1
-#    volumes:
-#      - C:\Users\Nikita\Projects\avito_stats\celerybeat-schedule:/usr/src/app/celerybeat-schedule
+    command: celery --app=scheduler.celery.app worker --loglevel=info
+    restart: unless-stopped
+    env_file:
+      - .env
     depends_on:
       - web
       - redis
+      - db
 
   beat:
     build: .
-    command: celery --app=scheduler.celery.app beat --max-interval=60 --loglevel=debug --scheduler=redbeat.RedBeatScheduler
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - REDBEAT_REDIS_URL=redis://redis:6379/1
-#    volumes:
-#      - C:\Users\Nikita\Projects\avito_stats\celerybeat-schedule:/usr/src/app/celerybeat-schedule
+    command: celery --app=scheduler.celery.app beat --max-interval=60 --loglevel=info --scheduler=redbeat.RedBeatScheduler
+    restart: unless-stopped
+    env_file:
+      - .env
     depends_on:
       - worker
       - web
 
-  dashboard:
+  flower:
     image: mher/flower
+    restart: unless-stopped
     ports:
       - 5555:5555
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_BROKER_API=redis://redis:6379/0  # ?? needed?
     depends_on:
       - web
       - redis
@@ -60,3 +65,4 @@ services:
 
 volumes:
   redis_data:
+  postgres_data:
