--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,13 @@ colorama==0.4.4
 Deprecated==1.2.13
 fastapi==0.75.1
 flower==1.0.0
+greenlet==1.1.2
 h11==0.13.0
 humanize==4.0.0
 idna==3.3
 kombu==5.2.4
 packaging==21.3
+psycopg2-binary
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 pydantic==1.9.0
@@ -27,6 +29,7 @@ pytz==2022.1
 redis==4.2.2
 six==1.16.0
 sniffio==1.2.0
+SQLAlchemy==1.4.36
 starlette==0.17.1
 tenacity==8.0.1
 tornado==6.1
@@ -35,3 +38,4 @@ uvicorn==0.17.6
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.14.0
+
